objects/Recommendation.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Targeted_Audience__c</fullName>
        <inlineHelpText>Who should this recommendation target?</inlineHelpText>
        <label>Targeted Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recommendation_Audience</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Recommendations</fullName>
        <filterScope>Everything</filterScope>
        <label>All Recommendations</label>
    </listViews>
    <listViews>
        <fullName>All_Recommendations</fullName>
        <columns>Name</columns>
        <columns>Description</columns>
        <columns>ActionReference</columns>
        <columns>Category__c</columns>
        <columns>Ranking__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Recommendations</label>
    </listViews>
    <listViews>
        <fullName>INTERNAL_Recommendations</fullName>
        <columns>Name</columns>
        <columns>Description</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Targeted_Audience__c</field>
            <operation>includes</operation>
            <value>All Internal Users,Sales Reps,Service Agents</value>
        </filters>
        <label>INTERNAL Recommendations</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>